[metadata]
description-file = README.md

[isort]
line_length=88
force_to_top=
skip=**/*_grpc.py,**/*_pb2.py
known_future_library=
known_standard_library=
known_third_party=
known_first_party=
indent='    '
multi_line_output=3
length_sort=1
forced_separate=
lines_between_types=1
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
include_trailing_comma=true

[flake8]
# W503: line break before binary operator
ignore = W503
exclude =
    .venv,
    .git,
    __pycache__,
    tests/**,
    examples/**,
    **/__init__.py,
    **/*_grpc.py,   # generated protobuf
    **/*_pb2.py,    # generated protobuf
max-complexity = 10
max-line-length = 88

[pydocstyle]
convention  = google
# match-dir   = (?!tests)(?!resources)(?!docs)(?!rst)(?!tensorflow)(?!tensorflow_serving)(?!examples)[^\.].*
match       = .*(?<!_test)\.py
# ignore      = D200, D203, D213, D406, D407   # Google conventions

[coverage]
branch = True
source = kfp
omit =
    **/*_test.py
    **/constants.py
    **/__init__.py
    **/*_pb2.py
    **/*_pb2_grpc.py