[metadata]
description-file = README.md

[isort]
line_length=88
force_to_top=
skip=build
known_future_library=
known_standard_library=
known_third_party=
known_first_party=
indent='    '
multi_line_output=3
length_sort=1
forced_separate=
lines_between_types=1
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
include_trailing_comma=true

[flake8]
# W503: line break before binary operator
# E501: line too long (we fix this by always checking with black)
# E203: whitespace before ':' (conflicts with black)
ignore = W503, E501, E203
exclude =
    .venv,
    .git,
    __pycache__,
    tests/**,
    examples/**,
    build/**,
    rst/**,
    **/__init__.py,
    **/*_grpc.py,   # generated protobuf
    **/*_pb2.py,    # generated protobuf
max-complexity = 10
max-line-length = 88

[pydocstyle]
convention  = google
match-dir   = [^\.|build|rst|tmp].*
match       = .*(?<!_test)\.py
add-ignore  = D415, D202
# D415  First line should end with a period, question mark, or exclamation point
# D202: No blank lines allowed after function docstring
#  D200, D203, D213, D406, D407

[coverage]
branch = True
source = kfx
omit =
    **/*_test.py
    **/constants.py
    **/__init__.py
    **/*_pb2.py
    **/*_pb2_grpc.py